--- a/index.html
+++ b/index.html
@@ -1,49 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Admin Login - PrimePicks</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PrimePicks Admin Panel</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body style="background: url('./images/background.PNG') no-repeat center center/cover;">
+
   <div class="container">
-    <div class="login-box">
-      <h1>PrimePicks Admin Login</h1>
-      <form id="loginForm">
-        <input type="password" id="password" placeholder="Enter Admin Password" required />
-        <button type="submit">Login</button>
-      </form>
-      <p id="error" class="error"></p>
+    <h1>PrimePicks Admin Panel</h1>
+
+    <!-- Add Prediction Form -->
+    <form id="predictionForm" class="card">
+      <h2>Add New Prediction</h2>
+      <input type="text" id="date" placeholder="Date (YYYY-MM-DD)" required>
+      <input type="text" id="time" placeholder="Time (HH:MM)" required>
+      <input type="text" id="match" placeholder="Match" required>
+      <input type="text" id="prediction" placeholder="Prediction" required>
+      <input type="text" id="odds" placeholder="Odds" required>
+      <button type="submit">Add Prediction</button>
+    </form>
+
+    <!-- Bets Table -->
+    <div class="card">
+      <h2>Stored Predictions</h2>
+      <table id="betsTable">
+        <thead>
+          <tr>
+            <th>Date</th>
+            <th>Time</th>
+            <th>Match</th>
+            <th>Prediction</th>
+            <th>Odds</th>
+            <th>Action</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
     </div>
   </div>
 
-  <script>
-    document.getElementById("loginForm").addEventListener("submit", async (e) => {
-      e.preventDefault();
-
-      const password = document.getElementById("password").value;
-
-      try {
-        const response = await fetch("https://admin-backend-7bsj.onrender.com/admin/login", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ password }),
-        });
-
-        const data = await response.json();
-
-        if (data.success) {
-          localStorage.setItem("adminLoggedIn", "true");
-          window.location.href = "adminPanel.html"; // redirect to dashboard
-        } else {
-          document.getElementById("error").textContent = data.message || "Login failed";
-        }
-      } catch (err) {
-        console.error("❌ Login error:", err);
-        document.getElementById("error").textContent = "Server error. Try again later.";
-      }
-    });
-  </script>
+  <script src="admin.js"></script>
 </body>
 </html>
