--- a/adminPanel.html
+++ b/adminPanel.html
@@ -3,44 +3,130 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PrimePicks Admin Panel</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>Admin Panel - PrimePicks</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.3.3/dist/tailwind.min.css" rel="stylesheet">
+  <style>
+    body {
+      background: url('background.PNG') no-repeat center center/cover;
+      background-size: cover;
+    }
+    .overlay {
+      background: rgba(255,255,255,0.95);
+    }
+    table {
+      border-collapse: collapse;
+    }
+    th, td {
+      border: 1px solid #ccc;
+      padding: 8px;
+    }
+  </style>
 </head>
-<body style="background: url('./images/background.PNG') no-repeat center center/cover;">
+<body class="min-h-screen flex flex-col items-center justify-start py-6">
 
-  <div class="container">
-    <h1>PrimePicks Admin Panel</h1>
+  <div class="overlay max-w-5xl w-full p-6 rounded shadow">
+    <div class="flex justify-between items-center mb-4">
+      <h1 class="text-2xl font-bold text-center flex-1">Admin Panel - Predictions</h1>
+      <button id="logoutBtn" class="bg-red-500 text-white p-2 rounded hover:bg-red-600">Logout</button>
+    </div>
 
-    <!-- Add Prediction Form -->
-    <form id="predictionForm" class="card">
-      <h2>Add New Prediction</h2>
-      <input type="text" id="date" placeholder="Date (YYYY-MM-DD)" required>
-      <input type="text" id="time" placeholder="Time (HH:MM)" required>
-      <input type="text" id="match" placeholder="Match" required>
-      <input type="text" id="prediction" placeholder="Prediction" required>
-      <input type="text" id="odds" placeholder="Odds" required>
-      <button type="submit">Add Prediction</button>
+    <!-- Prediction Form -->
+    <form id="predictionForm" class="grid grid-cols-1 md:grid-cols-5 gap-3 mb-6">
+      <input type="date" id="date" class="border p-2 rounded" required>
+      <input type="time" id="time" class="border p-2 rounded" required>
+      <input type="text" id="match" placeholder="Match" class="border p-2 rounded" required>
+      <input type="text" id="prediction" placeholder="Prediction" class="border p-2 rounded" required>
+      <input type="text" id="odds" placeholder="Odds" class="border p-2 rounded" required>
+      <button type="submit" class="col-span-1 md:col-span-5 bg-blue-600 text-white p-2 rounded hover:bg-blue-700">Add Prediction</button>
     </form>
 
-    <!-- Bets Table -->
-    <div class="card">
-      <h2>Stored Predictions</h2>
-      <table id="betsTable">
-        <thead>
-          <tr>
-            <th>Date</th>
-            <th>Time</th>
-            <th>Match</th>
-            <th>Prediction</th>
-            <th>Odds</th>
-            <th>Action</th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
-    </div>
+    <!-- Predictions Table -->
+    <table class="w-full table-auto text-center">
+      <thead>
+        <tr class="bg-gray-200">
+          <th>Date</th>
+          <th>Time</th>
+          <th>Match</th>
+          <th>Prediction</th>
+          <th>Odds</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody id="predictionsTable"></tbody>
+    </table>
   </div>
 
-  <script src="admin.js"></script>
+  <script>
+    const apiUrl = 'https://admin-backend-7bsj.onrender.com/predictions';
+    const table = document.getElementById('predictionsTable');
+    const form = document.getElementById('predictionForm');
+    const logoutBtn = document.getElementById('logoutBtn');
+
+    // Check login
+    if (localStorage.getItem('adminLoggedIn') !== 'true') {
+      window.location.href = 'login.html';
+    }
+
+    logoutBtn.addEventListener('click', () => {
+      localStorage.removeItem('adminLoggedIn');
+      window.location.href = 'login.html';
+    });
+
+    async function fetchPredictions() {
+      try {
+        const res = await fetch(apiUrl);
+        const data = await res.json();
+        table.innerHTML = data.map(bet => `
+          <tr>
+            <td>${bet.date}</td>
+            <td>${bet.time}</td>
+            <td>${bet.match}</td>
+            <td>${bet.prediction}</td>
+            <td>${bet.odds}</td>
+            <td>
+              <button onclick="deletePrediction('${bet._id}')" class="bg-red-500 text-white px-2 py-1 rounded hover:bg-red-600">Delete</button>
+            </td>
+          </tr>
+        `).join('');
+      } catch (err) {
+        console.error('❌ Error fetching predictions:', err);
+      }
+    }
+
+    form.addEventListener('submit', async e => {
+      e.preventDefault();
+      const bet = {
+        date: document.getElementById('date').value,
+        time: document.getElementById('time').value,
+        match: document.getElementById('match').value,
+        prediction: document.getElementById('prediction').value,
+        odds: document.getElementById('odds').value,
+      };
+
+      try {
+        await fetch(apiUrl, {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(bet),
+        });
+        form.reset();
+        fetchPredictions();
+      } catch (err) {
+        console.error('❌ Error adding prediction:', err);
+      }
+    });
+
+    async function deletePrediction(id) {
+      try {
+        await fetch(`${apiUrl}/${id}`, { method: 'DELETE' });
+        fetchPredictions();
+      } catch (err) {
+        console.error('❌ Error deleting prediction:', err);
+      }
+    }
+
+    // Initial fetch
+    fetchPredictions();
+  </script>
 </body>
 </html>
