--- a/index.html
+++ b/index.html
@@ -3,70 +3,51 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PrimePicks Admin Panel</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>Admin Login - PrimePicks</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.3.3/dist/tailwind.min.css" rel="stylesheet">
+  <style>
+    body {
+      background: url('background.PNG') no-repeat center center/cover;
+      background-size: cover;
+    }
+    .overlay {
+      background: rgba(255,255,255,0.95);
+    }
+    .loader {
+      border: 4px solid #f3f3f3;
+      border-top: 4px solid #10B981;
+      border-radius: 50%;
+      width: 24px;
+      height: 24px;
+      animation: spin 1s linear infinite;
+      display: inline-block;
+      vertical-align: middle;
+      margin-left: 8px;
+    }
+    @keyframes spin { 0% { transform: rotate(0deg);} 100% { transform: rotate(360deg);} }
+  </style>
 </head>
-<body>
+<body class="min-h-screen flex items-center justify-center">
 
-  <div class="container">
-    <!-- Login Card -->
-    <div id="loginCard" class="card">
-      <h1>Admin Login</h1>
-      <input type="password" id="adminPassword" placeholder="Enter Password">
-      <button id="loginBtn">
+  <div class="overlay rounded shadow max-w-sm w-full text-center p-0">
+    <div class="bg-green-500 text-white py-4 rounded-t">
+      <h1 class="text-xl font-bold">Admin Login</h1>
+    </div>
+    <div class="p-6">
+      <input type="password" id="adminPassword" placeholder="Enter Password" class="border p-3 rounded w-full mb-4 focus:outline-green-500">
+      <button id="loginBtn" class="bg-green-500 text-white p-3 rounded w-full hover:bg-green-600 flex justify-center items-center">
         Login
         <span id="loader" class="loader hidden"></span>
       </button>
-      <p id="loginError" class="hidden">Incorrect password!</p>
-    </div>
-
-    <!-- Admin Panel Card -->
-    <div id="adminCard" class="card hidden">
-      <div class="panel-header">
-        <h1>Admin Panel - Predictions</h1>
-        <button id="logoutBtn" class="logout-btn">Logout</button>
-      </div>
-
-      <!-- Add Prediction Form -->
-      <form id="predictionForm">
-        <input type="date" id="date" required>
-        <input type="time" id="time" required>
-        <input type="text" id="match" placeholder="Match" required>
-        <input type="text" id="prediction" placeholder="Prediction" required>
-        <input type="text" id="odds" placeholder="Odds" required>
-        <button type="submit">Add Prediction</button>
-      </form>
-
-      <!-- Predictions Table -->
-      <table>
-        <thead>
-          <tr>
-            <th>Date</th>
-            <th>Time</th>
-            <th>Match</th>
-            <th>Prediction</th>
-            <th>Odds</th>
-            <th>Action</th>
-          </tr>
-        </thead>
-        <tbody id="predictionsTable"></tbody>
-      </table>
+      <p id="loginError" class="text-red-500 mt-2 hidden">Incorrect Password!</p>
     </div>
   </div>
 
   <script>
-    const loginCard = document.getElementById('loginCard');
-    const adminCard = document.getElementById('adminCard');
     const loginBtn = document.getElementById('loginBtn');
-    const logoutBtn = document.getElementById('logoutBtn');
-    const loader = document.getElementById('loader');
     const loginError = document.getElementById('loginError');
+    const loader = document.getElementById('loader');
 
-    const apiUrl = 'https://admin-backend-7bsj.onrender.com'; // Backend URL
-    const table = document.getElementById('predictionsTable');
-    const form = document.getElementById('predictionForm');
-
-    // Login
     loginBtn.addEventListener('click', async () => {
       loginError.classList.add('hidden');
       loader.classList.remove('hidden');
@@ -75,11 +56,12 @@
       const password = document.getElementById('adminPassword').value;
 
       try {
-        const res = await fetch(`${apiUrl}/admin/login`, {
+        const res = await fetch('https://admin-backend-7bsj.onrender.com/admin/login', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ password })
         });
+
         const data = await res.json();
 
         setTimeout(() => {
@@ -87,80 +69,23 @@
           loginBtn.disabled = false;
 
           if (data.success) {
-            loginCard.classList.add('hidden');
-            adminCard.classList.remove('hidden');
-            fetchPredictions();
+            localStorage.setItem('adminLoggedIn', 'true');
+            window.location.href = 'adminPanel.html';
           } else {
             loginError.classList.remove('hidden');
           }
-        }, 500);
+        }, 800);
       } catch (err) {
         loader.classList.add('hidden');
         loginBtn.disabled = false;
-        loginError.textContent = 'Server error, try again!';
+        loginError.textContent = "Server error, try again!";
         loginError.classList.remove('hidden');
       }
     });
 
-    // Logout
-    logoutBtn.addEventListener('click', () => {
-      adminCard.classList.add('hidden');
-      loginCard.classList.remove('hidden');
-      document.getElementById('adminPassword').value = '';
-    });
-
-    // Fetch Predictions
-    async function fetchPredictions() {
-      try {
-        const res = await fetch(`${apiUrl}/predictions`);
-        const data = await res.json();
-        table.innerHTML = data.map(bet => `
-          <tr>
-            <td>${bet.date}</td>
-            <td>${bet.time}</td>
-            <td>${bet.match}</td>
-            <td>${bet.prediction}</td>
-            <td>${bet.odds}</td>
-            <td><button class="delete-btn" onclick="deletePrediction('${bet._id}')">Delete</button></td>
-          </tr>
-        `).join('');
-      } catch (err) {
-        console.error('❌ Error fetching predictions:', err);
-      }
-    }
-
-    // Add Prediction
-    form.addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const bet = {
-        date: document.getElementById('date').value,
-        time: document.getElementById('time').value,
-        match: document.getElementById('match').value,
-        prediction: document.getElementById('prediction').value,
-        odds: document.getElementById('odds').value,
-      };
-
-      try {
-        await fetch(`${apiUrl}/predictions`, {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(bet)
-        });
-        form.reset();
-        fetchPredictions();
-      } catch (err) {
-        console.error('❌ Error adding prediction:', err);
-      }
-    });
-
-    // Delete Prediction
-    async function deletePrediction(id) {
-      try {
-        await fetch(`${apiUrl}/predictions/${id}`, { method: 'DELETE' });
-        fetchPredictions();
-      } catch (err) {
-        console.error('❌ Error deleting prediction:', err);
-      }
+    // Auto-redirect if already logged in
+    if (localStorage.getItem('adminLoggedIn') === 'true') {
+      window.location.href = 'adminPanel.html';
     }
   </script>
 </body>
