--- a/adminPanel.html
+++ b/adminPanel.html
@@ -6,54 +6,143 @@
   <title>Admin Panel - PrimePicks</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.3.3/dist/tailwind.min.css" rel="stylesheet">
   <style>
+    /* Body & Background */
     body {
+      font-family: 'Inter', sans-serif;
       background: url('background.PNG') no-repeat center center/cover;
       background-size: cover;
+      margin: 0;
+      padding: 0;
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: start;
+      padding-top: 2rem;
     }
+
+    /* Overlay container */
     .overlay {
-      background: rgba(255,255,255,0.95);
+      background: rgba(255, 255, 255, 0.95);
+      border-radius: 1rem;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+      max-width: 1200px;
+      width: 95%;
+      padding: 2rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1.5rem;
     }
+
+    /* Header */
+    .overlay h1 {
+      font-size: 2rem;
+      font-weight: 700;
+      color: #10B981;
+      text-align: center;
+    }
+
+    /* Form */
+    #predictionForm input, #predictionForm button {
+      padding: 0.75rem 1rem;
+      border-radius: 0.5rem;
+      border: 1px solid #D1D5DB;
+      font-size: 1rem;
+      transition: all 0.3s ease;
+    }
+    #predictionForm input:focus {
+      outline: none;
+      border-color: #10B981;
+      box-shadow: 0 0 0 2px rgba(16, 185, 129, 0.3);
+    }
+    #predictionForm button {
+      background-color: #3B82F6;
+      color: white;
+      font-weight: 600;
+      cursor: pointer;
+      border: none;
+    }
+    #predictionForm button:hover {
+      background-color: #2563EB;
+    }
+
+    /* Table */
     table {
+      width: 100%;
       border-collapse: collapse;
+      text-align: center;
     }
     th, td {
-      border: 1px solid #ccc;
-      padding: 8px;
+      border: 1px solid #D1D5DB;
+      padding: 0.75rem 0.5rem;
+    }
+    th {
+      background-color: #F3F4F6;
+      font-weight: 600;
+    }
+    td button {
+      padding: 0.25rem 0.5rem;
+      border-radius: 0.25rem;
+      cursor: pointer;
+      font-weight: 500;
+    }
+    td button.delete {
+      background-color: #EF4444;
+      color: white;
+    }
+    td button.delete:hover {
+      background-color: #B91C1C;
+    }
+
+    /* Logout Button */
+    #logoutBtn {
+      background-color: #EF4444;
+      color: white;
+      padding: 0.5rem 1rem;
+      border-radius: 0.5rem;
+      font-weight: 600;
+      transition: all 0.3s;
+      cursor: pointer;
+    }
+    #logoutBtn:hover {
+      background-color: #B91C1C;
     }
   </style>
 </head>
-<body class="min-h-screen flex flex-col items-center justify-start py-6">
+<body>
 
-  <div class="overlay max-w-5xl w-full p-6 rounded shadow">
-    <div class="flex justify-between items-center mb-4">
-      <h1 class="text-2xl font-bold text-center flex-1">Admin Panel - Predictions</h1>
-      <button id="logoutBtn" class="bg-red-500 text-white p-2 rounded hover:bg-red-600">Logout</button>
+  <div class="overlay">
+    <!-- Header & Logout -->
+    <div class="flex justify-between items-center">
+      <h1>Admin Panel - Predictions</h1>
+      <button id="logoutBtn">Logout</button>
     </div>
 
     <!-- Prediction Form -->
-    <form id="predictionForm" class="grid grid-cols-1 md:grid-cols-5 gap-3 mb-6">
-      <input type="date" id="date" class="border p-2 rounded" required>
-      <input type="time" id="time" class="border p-2 rounded" required>
-      <input type="text" id="match" placeholder="Match" class="border p-2 rounded" required>
-      <input type="text" id="prediction" placeholder="Prediction" class="border p-2 rounded" required>
-      <input type="text" id="odds" placeholder="Odds" class="border p-2 rounded" required>
-      <button type="submit" class="col-span-1 md:col-span-5 bg-blue-600 text-white p-2 rounded hover:bg-blue-700">Add Prediction</button>
+    <form id="predictionForm" class="grid grid-cols-1 md:grid-cols-5 gap-3">
+      <input type="date" id="date" required>
+      <input type="time" id="time" required>
+      <input type="text" id="match" placeholder="Match" required>
+      <input type="text" id="prediction" placeholder="Prediction" required>
+      <input type="text" id="odds" placeholder="Odds" required>
+      <button type="submit" class="col-span-1 md:col-span-5">Add Prediction</button>
     </form>
 
     <!-- Predictions Table -->
-    <table class="w-full table-auto text-center">
-      <thead>
-        <tr class="bg-gray-200">
-          <th>Date</th>
-          <th>Time</th>
-          <th>Match</th>
-          <th>Prediction</th>
-          <th>Odds</th>
-          <th>Action</th>
-        </tr>
-      </thead>
-      <tbody id="predictionsTable"></tbody>
-    </table>
+    <div class="overflow-x-auto">
+      <table>
+        <thead>
+          <tr>
+            <th>Date</th>
+            <th>Time</th>
+            <th>Match</th>
+            <th>Prediction</th>
+            <th>Odds</th>
+            <th>Action</th>
+          </tr>
+        </thead>
+        <tbody id="predictionsTable"></tbody>
+      </table>
+    </div>
   </div>
 
   <script>
@@ -62,7 +151,7 @@
     const form = document.getElementById('predictionForm');
     const logoutBtn = document.getElementById('logoutBtn');
 
-    // Check login
+    // Redirect to login if not logged in
     if (localStorage.getItem('adminLoggedIn') !== 'true') {
       window.location.href = 'login.html';
     }
@@ -72,6 +161,7 @@
       window.location.href = 'login.html';
     });
 
+    // Fetch predictions
     async function fetchPredictions() {
       try {
         const res = await fetch(apiUrl);
@@ -84,7 +174,7 @@
             <td>${bet.prediction}</td>
             <td>${bet.odds}</td>
             <td>
-              <button onclick="deletePrediction('${bet._id}')" class="bg-red-500 text-white px-2 py-1 rounded hover:bg-red-600">Delete</button>
+              <button class="delete" onclick="deletePrediction('${bet._id}')">Delete</button>
             </td>
           </tr>
         `).join('');
@@ -93,6 +183,7 @@
       }
     }
 
+    // Add new prediction
     form.addEventListener('submit', async e => {
       e.preventDefault();
       const bet = {
@@ -116,6 +207,7 @@
       }
     });
 
+    // Delete prediction
     async function deletePrediction(id) {
       try {
         await fetch(`${apiUrl}/${id}`, { method: 'DELETE' });
@@ -125,8 +217,9 @@
       }
     }
 
-    // Initial fetch
+    // Initial load
     fetchPredictions();
   </script>
+
 </body>
 </html>
