--- a/adminPanel.html
+++ b/adminPanel.html
@@ -39,7 +39,7 @@
   </div>
 
   <script>
-    const apiUrl = 'https://admin-backend-7dt6.onrender.com';
+    const apiUrl = 'https://admin-backend-7dt6.onrender.com/predictions'; // Correct endpoint
     const table = document.getElementById('predictionsTable');
     const form = document.getElementById('predictionForm');
     const logoutBtn = document.getElementById('logoutBtn');
