--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     const loginError = document.getElementById('loginError');
     const loader = document.getElementById('loader');
 
+    const BACKEND_URL = 'https://admin-backend-7dt6.onrender.com';
+
     // Auto redirect if already logged in
     if (localStorage.getItem('adminLoggedIn') === 'true') {
       window.location.href = 'adminPanel.html';
@@ -36,7 +38,8 @@
       const password = document.getElementById('adminPassword').value;
 
       try {
-        const res = await fetch('https://admin-backend-7dt6.onrender.com', {
+        // Correct endpoint for admin login
+        const res = await fetch(`${BACKEND_URL}/admin/login`, {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ password })
@@ -52,6 +55,7 @@
             localStorage.setItem('adminLoggedIn', 'true');
             window.location.href = 'adminPanel.html';
           } else {
+            loginError.textContent = data.message || 'Incorrect Password!';
             loginError.classList.remove('hidden');
           }
         }, 800);
@@ -61,6 +65,7 @@
         loginBtn.disabled = false;
         loginError.textContent = "Server error, try again!";
         loginError.classList.remove('hidden');
+        console.error('❌ Login error:', err);
       }
     });
   </script>
